// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="Header"
>
  <div
    className="flex-container"
  >
    <HamburgerIcon
      tabindex="1"
    />
    <h1>
      <Link
        tabindex="1"
        to="/"
      >
        Haikuit
        <i
          className="fas fa-feather-alt"
        />
      </Link>
    </h1>
    <SearchIcon
      tabindex="1"
      toggleSearch={[Function]}
    />
  </div>
</header>
`;

exports[`Header should render search bar if searchShown is true 1`] = `
<header
  className="Header"
>
  <div
    className="flex-container"
  >
    <HamburgerIcon
      tabindex="1"
    />
    <h1>
      <Link
        tabindex="1"
        to="/"
      >
        Haikuit
        <i
          className="fas fa-feather-alt"
        />
      </Link>
    </h1>
    <SearchIcon
      tabindex="1"
      toggleSearch={[Function]}
    />
  </div>
  <input
    className="search-input"
    placeholder="Search for a word..."
    type="text"
  />
</header>
`;
